crates/nexus-tui/tests/snapshots/event_line_render_test__snapshot_loud_error_event.snap
---
source: crates/nexus-tui/tests/event_line_render_test.rs
assertion_line: 87
expression: render_all_depths(&evt)
---
--- Truecolor ---
[38;2;144;147;255m│[0m [38;2;255;82;83m▎[0m [38;5;252m03:33:20[0m [38;2;255;82;83m✖ ERROR[0m [38;2;144;147;255m▶ [0m[38;2;168;165;255mrun:run_8c11[0m  node failed inference: cuda alloc
--- Color256 ---
[38;5;105m│[0m [38;5;203m▎[0m [38;5;252m03:33:20[0m [38;5;203m✖ ERROR[0m [38;5;105m▶ [0m[38;5;105mrun:run_8c11[0m  node failed inference: cuda alloc
--- Color16 ---
[38;5;12m│[0m [38;5;9m▎[0m [38;5;252m03:33:20[0m [38;5;9m✖ ERROR[0m [38;5;12m▶ [0m[38;5;12mrun:run_8c11[0m  node failed inference: cuda alloc
